Fix CSS dark mode

--- a/src/CoreBundle/Resources/public/scss/style.scss
+++ b/src/CoreBundle/Resources/public/scss/style.scss
@@ -34,6 +34,7 @@ $icon_locale: url('../images/icons/locale.png');
   background-position: left center;
   background-repeat: no-repeat;
 }
+
 .header_add_all {
   padding: 2px 0 3px 20px;
   background-image: $icon_dca_add;
@@ -41,99 +42,143 @@ $icon_locale: url('../images/icons/locale.png');
   background-repeat: no-repeat;
   margin-left: 15px;
 }
+
 .rendersetting_add_all {
   background-image: $icon_rendersettings_add;
 }
+
 .dca_palette {
   color: rgba(138, 184, 88, 1);
   margin: 6px 0;
   padding-left: 24px;
   background: $icon_pal_open 3px center no-repeat;
 }
+
 .mm_problem_display {
   margin-bottom: 30px;
+
   ul {
     padding: 0;
     list-style: none;
   }
 }
+
 .tl_subdca {
   > legend {
     margin: 0;
     padding: 10px 0 10px 23px;
     background: $icon_filter_setting no-repeat left center;
   }
+
   legend label {
     font-weight: bold;
   }
 }
+
 .list_view {
   li:first-child .tl_content {
     border-top: 1px solid rgba(235, 235, 228, 1);
   }
+
   .tl_content > div:first-child {
     float: left;
   }
 }
+
 .tl_class {
   color: rgba(198, 198, 198, 1);
 }
+
 .tl_formbody {
   position: relative;
 }
+
+// 30, 32, 36
 input[readonly] {
   background-color: rgba(235, 235, 228, 1);
+
   &:focus {
     background-color: rgba(235, 235, 228, 1);
   }
 }
+
+html[data-color-scheme="dark"] input[readonly] {
+  background-color: rgba(30, 32, 36, 1);
+
+  &:focus {
+    background-color: rgba(30, 32, 36, 1);
+  }
+}
+
 textarea[readonly] {
   background-color: rgba(235, 235, 228, 1);
+
   &:focus {
     background-color: rgba(235, 235, 228, 1);
   }
 }
+
+html[data-color-scheme="dark"] textarea[readonly] {
+  background-color: rgba(30, 32, 36, 1);
+
+  &:focus {
+    background-color: rgba(30, 32, 36, 1);
+  }
+}
+
 .wc_info {
   margin: 0;
 }
+
 .wc_label {
   width: 31px;
   display: inline-block;
 }
+
 .clx {
   overflow: visible;
 }
+
 .w50x {
   height: auto;
 }
+
 #table_tl_metamodel_dcasetting_ tr.odd td {
   background-color: transparent;
 }
+
 .dca_combine.widget td:empty {
   display: none;
 }
+
 form[id*="tl_metamodel_"] .wizard {
   a[data-lightbox] img {
     margin-top: 3px;
   }
+
   a[onclick] img {
     margin-top: 3px;
   }
 }
+
 fieldset.tl_subdca {
   padding: 0;
   margin: 0;
   border: none;
 }
+
 .multicolumnwizard .fallback_language span {
   font-weight: bold;
 }
+
 form[id^=mm_] .sort_hint {
   display: none;
 }
+
 .long .chzn-container {
   width: 100%;
 }
+
 .widget.translat-attr label {
   padding-left: 20px;
   display: inline-block;
@@ -148,24 +193,31 @@ form[id^=mm_] .sort_hint {
   .jumpTo_language {
     width: 15%;
   }
+
   .jumpTo_type {
     width: 15%;
+
     select {
       width: 100%;
     }
   }
+
   .jumpTo_page {
     width: 15%;
+
     input {
       width: 83%;
     }
   }
+
   .jumpTo_filter {
     width: 55%;
+
     select, div.tl_select {
       width: 100%;
     }
   }
+
   .operations {
     display: none;
   }
